# Analyst-Report-Dashboard

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOY_KOYEB.md  Dockerfile  README.md  SPEC.md  STATUS.md  pyinstaller_server.spec  pyproject.toml  server_launcher.py
alembic/: env.py
alembic/versions/: 20260307_0001_init_schema.py
app/: config.py  logging_config.py  main.py  runtime_paths.py
app/api/: dashboard_view.py  routes_dashboard.py  routes_health.py  routes_reports.py
app/collectors/: base.py
app/collectors/fnguide/: __init__.py  client.py  parser_playwright.py  parser_requests.py  selectors.py
app/collectors/naver/: __init__.py  client.py  parser.py
app/db/: models.py  session.py
app/domain/: business_day.py  calculators.py  opinion_mapper.py  schemas.py
app/integrations/: __init__.py  email_adapter.py  notebooklm_adapter.py  notion_adapter.py  slide_adapter.py
app/jobs/: __init__.py  run_cleanup.py  run_ingest.py  run_publish.py
app/services/: export_service.py  ingest_service.py  report_case_utils.py  report_filter_utils.py  report_summary_utils.py  sector_mapping_loader.py  sector_service.py  snapshot_service.py
app/static/css/: dashboard.css
app/static/js/: dashboard.js
app/templates/: dashboard.html
scripts/: koyeb-start.sh
tests/: conftest.py  test_calculators.py  test_dashboard_api.py  test_dashboard_view.py  test_export_service.py  test_fnguide_parser.py  test_health.py  test_ingest_service.py  test_opinion_mapper.py  test_reports_api.py  test_run_publish.py  test_sector_service.py  test_snapshot_service.py
(+1 files in other folders)
